--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,7 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run test --if-present
+      - name: Deploy with gh-pages
+        run: npm run deploy
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
