--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://<your-github-username>.github.io/<repo-name>/",
+  "homepage": "https://ducanh13121997.github.io/react-vite/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
